moved the intro out of the article to avoid the padding on the body on small sizes

--- a/assets/_scss/_typography.scss
+++ b/assets/_scss/_typography.scss
@@ -37,6 +37,10 @@
             font-size: 2em;
         }
     }
+    h3{
+        padding: 1em;
+        margin: 0;
+    }
 
     h1, h2, p{
         width: 100%;
